# YL

Algorithms/: PyGame-fill.py  dots_to_rect.py  reversed_list.py  schedules_intersect.py
Algorithms/sorts/: human_readable  shell.py
CodePractice/: merge_2_lists.py
Dimka-GameLife/: CMakeLists.txt  CMakePresets.json  main.cpp
Dimka-GameLife/examples/: glaider.txt
Dimka-GameLife/test/: CMakeLists.txt  test.cpp
Pygame/: ParallelRectsCounter.py  Py3D.py  PyGame-fill.py  PyGame-template.py  PyGame01-bricks.py  PyGame02-0003.py  PyGame02-0005.py  PyGame02-clickme.py  PyGame02-template.py  PyGame03-01.py  PyGame04-02.py  PyGame04-03.py  PyGame04-04.py  PyGame04-05.py  PyGame04-06.py  PyGame05-GIT.py  PyGame05-cw.py  PyGame06-01.py  PyGame06-02.py  PyGame06-03.py  PyGame06-06.py  PyGame06-07.py  PyGame06-cw.py  PyGame07-02.py  PyGame07-03.py  PyGame07-cw.py  reversed_list.py  test.py  test2.py
Pygame/PyGame02/: PyGame02-0004.py  PyGame02-0006.py  PyGame02-0007.py
Pygame/PyGame03/: PyGame03-01.py  PyGame03-02.py
Pygame/PyGame04/: PyGame04-01.py  PyGame04-05.py
Pygame/PyGame05-01/: main-05-01.py
Pygame/PyGame05-02/: main-05-02.py
Pygame/PyGame05-03/: main-05-03.py
Pygame/PyGame05-04/: main-05-04.py
Pygame/PyGame05-05/: main-05-05.py
Pygame/PyGame06-04/: main-06-04.py
Pygame/PyGame06-05/: main-06-05.py
Pygame/PyGame07/: PyGame07-02.py  PyGame07-04.py
Pygame/PyGame08/: PyGame08-01.py  PyGame08-02.py  PyGame08.py
Pygame/Web01/: Web01-01.py  Web01-02.py
Tkinter/: main.py  normal_coding.py  test.py
cpp/: CSVParser.cpp  test002.csv
